--- a/To.html
+++ b/To.html
@@ -110,7 +110,7 @@
   var tompositif = 'Mau';
   var tomnegatif = 'Engga';
     
-    async function menuju(){pesanwhatsapp = "Makasii udah kasih kejutan " + nama;await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');window.location = "https://api.whatsapp.com/send?6287787525867=&text=" + pesanwhatsapp;}
+    async function menuju(){pesanwhatsapp = "Makasii udah kasih kejutan " + nama;await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');window.location = "https://wa.me/send?6287787525867=&text=" + pesanwhatsapp;}
 </script>
 <script src="https://malasid.github.io/html/hbd.js"></script>
 
