--- a/To.html
+++ b/To.html
@@ -48,7 +48,7 @@
      <div><blockquote id='bq' data-text='㋡'>
        <p id="kalimat">Aku Ada Sesuatu Nih 🤣🎉</p>
 
-       <p id="pesan1">Klik 4 Tombol di Bawah! 😆🎉</p>
+       <p id="pesan1">Klik 4 Kado di Bawah! 😆🎉</p>
        <div id="kolombaru">
          <li id="lv1">🎁</li>
          <li id="lv2">🎁</li>
@@ -110,7 +110,7 @@
   var tompositif = 'Mau';
   var tomnegatif = 'Engga';
     
-    async function menuju(){pesanwhatsapp = "Makasii udah kasih kejutan " + nama;await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');window.location = "https://wa.me/6287787525867" + pesanwhatsapp;}
+    async function menuju(){pesanwhatsapp = "Makasii udah kasih kejutan " + nama;await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');window.location = "https://wa.me/6287787525867/?text=" + pesanwhatsapp;}
 </script>
 <script src="https://malasid.github.io/html/hbd.js"></script>
 
