--- a/To.html
+++ b/To.html
@@ -76,7 +76,7 @@
      <div id="Tombol"><a id="By">&#128140; Lanjut</a></div>
 
      <!-- Pesan Tambahan -->
-     <p id="katatambahan" class="sembunyi">Gajadi deh soalnya kamu bau wleee 😜</p>
+     <p id="katatambahan" class="sembunyi">Gajadi deh soalnya kamu kepet mwhehe 😜😂</p>
      
      <!-- Pesan Ditolak -->
      <div id="pesanditolak">
@@ -110,7 +110,7 @@
   var tompositif = 'Mau';
   var tomnegatif = 'Engga';
     
-    async function menuju(){pesanwhatsapp = "Makasii udah kasih kejutan " + nama;await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');window.location = "https://wa.me/6287787525867/?text=" + pesanwhatsapp;}
+    async function menuju(){pesanwhatsapp = "Makasii udah kasih kejutan ke " + nama;await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');window.location = "https://wa.me/6287787525867/?text=" + pesanwhatsapp;}
 </script>
 <script src="https://malasid.github.io/html/hbd.js"></script>
 
