--- a/To.html
+++ b/To.html
@@ -18,7 +18,7 @@
 <body>
   
    <!-- Ganti Audio di sini -->
-   <audio src="https://feeldreams.github.io/djikhlas.mp3" id="linkmp3" class="sembunyi" loop></audio>
+   <audio src="https://feeldreams.github.io/djikhlas.mp3" id="linkmp3" class="sembunyi"></audio>
    
    <div id="bodyblur">
      <!-- Wallpaper --><img src="https://feeldreams.github.io/wp9.jpg" id="wallpaper"/><div id="beneranblur"></div>
@@ -103,6 +103,13 @@
            await swals.fire('Ups!', 'Nama tidak boleh kosong atau lebih dari 10 karakter, ya!');inipesan();
     }
   }
+
+  const audio = document.getElementById('linkmp3');
+audio.addEventListener('ended', function() {
+    this.currentTime = 0;
+    this.play();
+}, false);
+
 
   //Variable Pertanyaan Akhir
   var tanya = 'Mau Kado Gak Nih? 😶🎉';
